# aetherwild

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buid.bat  build.sh
src/: main.cpp
src/Entities/: Entity.cpp  Entity.hpp  Monster.cpp  Monster.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp
src/Game/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  StateManager.cpp  StateManager.hpp
src/Game/States/: MainMenuState.cpp  MainMenuState.hpp
src/Game/States/MainMenu/: MainMenuState.cpp  MainMenuState.hpp
src/Game/States/OptionsMenu/: OptionsMenuState.cpp  OptionsMenuState.hpp
src/Graphics/: Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
src/Input/: InputEvent.hpp  InputManager.cpp  InputManager.hpp
src/Utils/: Constants.cpp  Constants.hpp  Timer.cpp  Timer.hpp  Vector2.cpp  Vector2.hpp
src/World/: Collision.cpp  Collision.hpp  Map.cpp  Map.hpp  Tile.cpp  Tile.hpp
